--- a/vite-project/src/pages/home/heroBanner/style.scss
+++ b/vite-project/src/pages/home/heroBanner/style.scss
@@ -1,13 +1,12 @@
-@import '../../../mixins.scss';
+@import "../../../mixins.scss";
 
 .heroBanner {
     width: 100%;
     height: 450px;
-    background: var(--black);
+    background-color: var(--black);
     display: flex;
     align-items: center;
     position: relative;
-    object-fit: cover;
 
     @include md {
         height: 700px;
@@ -19,7 +18,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        opacity: .5;
+        opacity: 0.5;
         overflow: hidden;
 
         .lazy-load-image-background {
@@ -35,12 +34,12 @@
         }
     }
 
-
     .opacity-layer {
         width: 100%;
         height: 250px;
         background: linear-gradient(180deg,
-                rgba(4, 21, 45, 0) 0% #04152d 79.17%);
+                rgba(4, 21, 45, 0) 0%,
+                #04152d 79.17%);
         position: absolute;
         bottom: 0;
         left: 0;
@@ -67,9 +66,8 @@
             }
         }
 
-
         .subTitle {
-            font-size: 10px;
+            font-size: 18px;
             font-weight: 500;
             margin-bottom: 40px;
 
@@ -86,7 +84,7 @@
             input {
                 width: calc(100% - 100px);
                 height: 50px;
-                background: white;
+                background-color: white;
                 outline: 0;
                 border: 0;
                 border-radius: 30px 0 0 30px;
